--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   </head>
   <body>
                           <!-- Navbar -->
+    <header class="header">                  
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-white" data-aos="fade-down">
         <div class="container-fluid">
           <a class="navbar-brand px-5" href="#">FCSSS</a>
@@ -42,6 +43,7 @@
           </div>
         </div>
       </nav>
+    </header>    
 
       <!-- End of Navbar -->
 
