--- a/index.html
+++ b/index.html
@@ -27,29 +27,33 @@
 
   <!-- Animate on Scroll(AOS) CSS -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+  <!-- Animate Css -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
   <link rel="stylesheet" href="css/style.css">
   <title>Fatima Convent Senior Secondary School</title>
 </head>
 
-<body>
+<div>
 
-  <div class="page-wrapper">
-		<!-- Preloader -->
+   <div class="page-wrapper">
+		 <!-- Preloader  -->
 		<div class="preloader">
 			<div class="icon"></div>
-		</div>
+		</div> 
 
   <!-- Navbar -->
   <header class="header">
-    <nav class="navbar fixed-top navbar-expand-lg navbar-light" data-aos="fade-down">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light animate__animated animate__fadeInDown">
       <div class="container-fluid">
-        <a class="navbar-brand px-3" href="#">FCSSS</a>
+        <a class="navbar-brand px-3 animate__animated animate__zoomIn" href="#">FCSSS</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
+          <ul class="navbar-nav ms-auto animate__animated animate__zoomIn">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
@@ -93,20 +97,29 @@
       <div class="row">
         <div class="col-12">
 
-          <h1>Welcome to our Website!</h1>
-
+          <h1 class="animate__animated animate__zoomIn animate__delay-1s">Welcome to our Website!</h1>
+<p class="my-4 animate__animated animate__zoomIn animate__delay-2s">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci doloribus sapiente ad recusandae a rem dolore sunt sit doloremque ipsa dignissimos molestias voluptate sequi, esse non, quaerat quis temporibus nostrum.
+Fugit eveniet voluptatum voluptas repellendus cum tempore sed sint quis et quam, maxime possimus impedit est, reprehenderit vel corrupti amet quibusdam perspiciatis adipisci soluta provident laudantium. Sunt, maiores saepe. Optio.
+Nobis quisquam nisi perspiciatis esse recusandae illo repellendus! Nobis ad laborum minima ipsa, voluptatem sunt at deserunt nulla numquam cupiditate quibusdam odio assumenda quas perferendis ipsam, optio omnis quos iusto!
+A quisquam adipisci corporis, eius aliquid hic cum voluptatum ducimus asperiores voluptatem numquam consequatur in repellat rerum maxime accusantium itaque facere! Omnis, amet commodi. Vel, ipsum. Tempora vitae recusandae sed.
+Culpa repellat, eligendi aliquid eius unde earum velit quas sed aperiam ratione placeat eaque, itaque expedita, molestiae magni aliquam! Obcaecati libero atque aliquid minima consectetur amet ea officiis, nesciunt est!
+Totam quo excepturi rem et fugit voluptas quam obcaecati explicabo tenetur placeat tempore enim optio culpa sint officia labore nesciunt neque corrupti, nemo minus. Deserunt est ratione maiores provident quasi.
+Voluptas similique ut quis velit accusantium enim unde non, quia dolorum quam natus neque, placeat tempora incidunt laudantium ipsa totam distinctio exercitationem aliquid. Placeat, porro iure deleniti consequatur tenetur nostrum!
+Esse eius modi ex rem officia quos dolorem quaerat blanditiis aperiam in facere provident vitae tempora quia voluptas, autem alias, quas corporis. Sed cumque dicta nam animi totam a et.
+Sit facilis vitae eius! Doloremque doloribus officia facere magni explicabo natus error autem aut pariatur repudiandae. Quam, neque tempora laudantium accusantium hic tempore, aliquid, doloremque quisquam perferendis vero blanditiis illum.
+Tempora, repellat assumenda odit distinctio reprehenderit, aperiam natus dolor ipsa sint fuga veniam iste corporis enim! Quo corporis ullam esse odit! Cum quas labore nostrum aspernatur rerum quidem voluptates excepturi.</p>
         </div>
       </div>
     </div>
-    </div>
+    
   </section>
-
+</div>
+<script src="js/main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
-  <script src="js/main.js"></script>
 </body>
 
 </html>
