--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="#">Admission Details</a></li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
                 <li><a class="dropdown-item" href="#">Fee Structure</a></li>
                 <li>
                   <hr class="dropdown-divider">
