--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             <ul>
                                 <li><img src="images/all-icon/map.png" alt="icon"><span>Bongaon, Rangia-781354,
                                         Assam</span></li>
-                                <li><img src="images/all-icon/email.png" alt="icon"><span>elonmusk@gmail.com</span></li>
+                                <li><img src="images/all-icon/email.png" alt="icon"><span>fatimaconventschoolrangia@gmail.com</span></li>
                             </ul>
                         </div>
                     </div>
