added our vision part remove other parts

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!--====== Responsive css ======-->
     <link rel="stylesheet" href="css/responsive.css">
 
-    <link rel="stylesheet" href="/index-2.html">
+    <!-- <link rel="stylesheet" href="/index-2.html"> -->
 
 
 </head>
@@ -468,229 +468,30 @@
 
     <!--====== APPLY PART ENDS ======-->
 
-    <!--====== COURSE PART START ======-->
+    <!--====== OUR VISION PART START ======-->
+<section id="our_vision" class="mb-100 gray-bg">
+    <div class="container">
 
-    <section id="course-part" class="pt-115 pb-120 gray-bg">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="section-title pb-45">
-                        <h5>Our course</h5>
-                        <h2>Featured courses </h2>
-                    </div> <!-- section title -->
-                </div>
-            </div> <!-- row -->
-            <div class="row course-slied mt-30">
-                <div class="col-lg-4">
-                    <div class="singel-course">
-                        <div class="thum">
-                            <div class="image">
-                                <img src="images/course/cu-1.jpg" alt="Course">
-                            </div>
-                            <div class="price">
-                                <span>Free</span>
-                            </div>
-                        </div>
-                        <div class="cont">
-                            <ul>
-                                <li><i class="fa fa-star"></i></li>
-                                <li><i class="fa fa-star"></i></li>
-                                <li><i class="fa fa-star"></i></li>
-                                <li><i class="fa fa-star"></i></li>
-                                <li><i class="fa fa-star"></i></li>
-                            </ul>
-                            <span>(20 Reviws)</span>
-                            <a href="courses-singel.html">
-                                <h4>Learn basis javascirpt from start for beginner</h4>
-                            </a>
-                            <div class="course-teacher">
-                                <div class="thum">
-                                    <a href="#"><img src="images/course/teacher/t-1.jpg" alt="teacher"></a>
-                                </div>
-                                <div class="name">
-                                    <a href="#">
-                                        <h6>Mark anthem</h6>
-                                    </a>
-                                </div>
-                                <div class="admin">
-                                    <ul>
-                                        <li><a href="#"><i class="fa fa-user"></i><span>31</span></a></li>
-                                        <li><a href="#"><i class="fa fa-heart"></i><span>10</span></a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div> <!-- singel course -->
-                </div>
-                <div class="col-lg-4">
-                    <div class="singel-course">
-                        <div class="thum">
-                            <div class="image">
-                                <img src="images/course/cu-2.jpg" alt="Course">
-                            </div>
-                            <div class="price">
-                                <span>Free</span>
-                            </div>
-                        </div>
-                        <div class="cont">
-                            <ul>
-                                <li><i class="fa fa-star"></i></li>
-                                <li><i class="fa fa-star"></i></li>
-                                <li><i class="fa fa-star"></i></li>
-                                <li><i class="fa fa-star"></i></li>
-                                <li><i class="fa fa-star"></i></li>
-                            </ul>
-                            <span>(20 Reviws)</span>
-                            <a href="courses-singel.html">
-                                <h4>Learn basis javascirpt from start for beginner</h4>
-                            </a>
-                            <div class="course-teacher">
-                                <div class="thum">
-                                    <a href="#"><img src="images/course/teacher/t-2.jpg" alt="teacher"></a>
-                                </div>
-                                <div class="name">
-                                    <a href="#">
-                                        <h6>Mark anthem</h6>
-                                    </a>
-                                </div>
-                                <div class="admin">
-                                    <ul>
-                                        <li><a href="#"><i class="fa fa-user"></i><span>31</span></a></li>
-                                        <li><a href="#"><i class="fa fa-heart"></i><span>10</span></a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div> <!-- singel course -->
-                </div>
-                <div class="col-lg-4">
-                    <div class="singel-course">
-                        <div class="thum">
-                            <div class="image">
-                                <img src="images/course/cu-3.jpg" alt="Course">
-                            </div>
-                            <div class="price">
-                                <span>Free</span>
-                            </div>
-                        </div>
-                        <div class="cont">
-                            <ul>
-                                <li><i class="fa fa-star"></i></li>
-                                <li><i class="fa fa-star"></i></li>
-                                <li><i class="fa fa-star"></i></li>
-                                <li><i class="fa fa-star"></i></li>
-                                <li><i class="fa fa-star"></i></li>
-                            </ul>
-                            <span>(20 Reviws)</span>
-                            <a href="courses-singel.html">
-                                <h4>Learn basis javascirpt from start for beginner</h4>
-                            </a>
-                            <div class="course-teacher">
-                                <div class="thum">
-                                    <a href="#"><img src="images/course/teacher/t-3.jpg" alt="teacher"></a>
-                                </div>
-                                <div class="name">
-                                    <a href="#">
-                                        <h6>Mark anthem</h6>
-                                    </a>
-                                </div>
-                                <div class="admin">
-                                    <ul>
-                                        <li><a href="#"><i class="fa fa-user"></i><span>31</span></a></li>
-                                        <li><a href="#"><i class="fa fa-heart"></i><span>10</span></a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div> <!-- singel course -->
-                </div>
-                <div class="col-lg-4">
-                    <div class="singel-course">
-                        <div class="thum">
-                            <div class="image">
-                                <img src="images/course/cu-4.jpg" alt="Course">
-                            </div>
-                            <div class="price">
-                                <span>Free</span>
-                            </div>
-                        </div>
-                        <div class="cont">
-                            <ul>
-                                <li><i class="fa fa-star"></i></li>
-                                <li><i class="fa fa-star"></i></li>
-                                <li><i class="fa fa-star"></i></li>
-                                <li><i class="fa fa-star"></i></li>
-                                <li><i class="fa fa-star"></i></li>
-                            </ul>
-                            <span>(20 Reviws)</span>
-                            <a href="courses-singel.html">
-                                <h4>Learn basis javascirpt from start for beginner</h4>
-                            </a>
-                            <div class="course-teacher">
-                                <div class="thum">
-                                    <a href="#"><img src="images/course/teacher/t-4.jpg" alt="teacher"></a>
-                                </div>
-                                <div class="name">
-                                    <a href="#">
-                                        <h6>Mark anthem</h6>
-                                    </a>
-                                </div>
-                                <div class="admin">
-                                    <ul>
-                                        <li><a href="#"><i class="fa fa-user"></i><span>31</span></a></li>
-                                        <li><a href="#"><i class="fa fa-heart"></i><span>10</span></a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div> <!-- singel course -->
-                </div>
-                <div class="col-lg-4">
-                    <div class="singel-course">
-                        <div class="thum">
-                            <div class="image">
-                                <img src="images/course/cu-5.jpg" alt="Course">
-                            </div>
-                            <div class="price">
-                                <span>Free</span>
-                            </div>
-                        </div>
-                        <div class="cont">
-                            <ul>
-                                <li><i class="fa fa-star"></i></li>
-                                <li><i class="fa fa-star"></i></li>
-                                <li><i class="fa fa-star"></i></li>
-                                <li><i class="fa fa-star"></i></li>
-                                <li><i class="fa fa-star"></i></li>
-                            </ul>
-                            <span>(20 Reviws)</span>
-                            <a href="courses-singel.html">
-                                <h4>Learn basis javascirpt from start for beginner</h4>
-                            </a>
-                            <div class="course-teacher">
-                                <div class="thum">
-                                    <a href="#"><img src="images/course/teacher/t-5.jpg" alt="teacher"></a>
-                                </div>
-                                <div class="name">
-                                    <a href="#">
-                                        <h6>Mark anthem</h6>
-                                    </a>
-                                </div>
-                                <div class="admin">
-                                    <ul>
-                                        <li><a href="#"><i class="fa fa-user"></i><span>31</span></a></li>
-                                        <li><a href="#"><i class="fa fa-heart"></i><span>10</span></a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div> <!-- singel course -->
-                </div>
-            </div> <!-- course slied -->
-        </div> <!-- container -->
-    </section>
+    <div class="row">
+        <div class="col-lg-6">
+            <div class="section-title mt-50 msggg ">
+                <h5>Our Vision</h5>
+                <h2>Our Mission</h2>
+<div class="message  align-content-center">
 
-    <!--====== COURSE PART ENDS ======-->
+    <p class="msg1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate enim nostrum, consectetur <br> in odio dolore beatae sint praesentium magnam earum at labore, corporis facilis nisi. Ducimus similique nobis harum illo?</p>
+
+    <p class="msg2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate enim nostrum, consectetur <br> in odio dolore beatae sint praesentium magnam earum at labore, corporis <br> facilis nisi. Ducimus similique nobis harum illo?</p>
+</div>
+
+            </div>
+        </div>
+    </div>
+    </div>
+</section>
+   
+
+    <!--====== OUR VISION PART ENDS ======-->
 
     <!--====== VIDEO FEATURE PART START ======-->
 
@@ -757,7 +558,7 @@
 
     <!--====== TEACHERS PART START ======-->
 
-    <section id="teachers-part" class="pt-70 pb-120">
+    <section id="teachers-part" class="pt-70 pb-120 gray-bg">
         <div class="container">
             <div class="row">
                 <div class="col-lg-5">
@@ -840,7 +641,7 @@
 
     <!--====== PUBLICATION PART START ======-->
 
-    <section id="publication-part" class="pt-115 pb-120 gray-bg">
+    <section id="publication-part" class="pt-115 pb-120 ">
         <div class="container">
             <div class="row align-items-end">
                 <div class="col-lg-6 col-md-8 col-sm-7">
@@ -1240,7 +1041,7 @@
                                         <i class="fa fa-home"></i>
                                     </div>
                                     <div class="cont">
-                                        <p>143 castle road 517 district, kiyev port south Canada</p>
+                                        <p>Fatima Nagar, Bongaon, Rangia, Assam-781354</p>
                                     </div>
                                 </li>
                                 <li>
@@ -1248,7 +1049,7 @@
                                         <i class="fa fa-phone"></i>
                                     </div>
                                     <div class="cont">
-                                        <p>+3 123 456 789</p>
+                                        <p>+91 9954950683</p>
                                     </div>
                                 </li>
                                 <li>
@@ -1256,7 +1057,7 @@
                                         <i class="fa fa-envelope-o"></i>
                                     </div>
                                     <div class="cont">
-                                        <p>info@yourmail.com</p>
+                                        <p>info@fatimaschoolrangia@gmail.com</p>
                                     </div>
                                 </li>
                             </ul>
@@ -1271,7 +1072,7 @@
                 <div class="row">
                     <div class="col-md-8">
                         <div class="copyright text-md-left text-center pt-15">
-                            <p><a target="_blank" href="https://www.templateshub.net">Templates Hub</a> </p>
+                            <p>Designed, Developed & Maintain By &lt;/Tensor_Block&gt; </p>
                         </div>
                     </div>
                     <div class="col-md-4">
