--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 	<title>Fatima Convent Senior SEcondary School </title>
 
-	<title>EduChamp : Education HTML Template </title>
+	<title>Fatima Convent Senior SEcondary School </title>
 
 	
 	<!-- MOBILE SPECIFIC ============================================= -->
