Added Our Vision &Mission

--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
 	<meta name="format-detection" content="telephone=no">
 	
 	<!-- FAVICONS ICON ============================================= -->
-	<link rel="icon" href="assets/images/favicon.ico" type="image/x-icon" />
-	<link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png" />
-	
+	<link rel="shortcut icon" href="../assets/images/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="../assets/images/favicon.ico" type="image/x-icon">
 	<!-- PAGE TITLE HERE ============================================= -->
 
 	<title>Fatima Convent Senior SEcondary School </title>
@@ -66,7 +65,7 @@
 			<div class="container">
 				<div class="row d-flex justify-content-between">
 					<div class="topbar-left">
-						<ul>
+						<ul class="text-center">
 							<li><a href="faq-1.html"><i class="fa fa-question-circle"></i>Ask a Question</a></li>
 							<li><a href="javascript:;"><i class="fa fa-envelope-o"></i>Support@website.com</a></li>
 						</ul>
@@ -104,8 +103,8 @@
                         <div class="secondary-inner">
                             <ul>
 								<li><a href="javascript:;" class="btn-link"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="javascript:;" class="btn-link"><i class="fa fa-google-plus"></i></a></li>
-								<li><a href="javascript:;" class="btn-link"><i class="fa fa-linkedin"></i></a></li>
+								<li><a href="javascript:;" class="btn-link"><i class="fa fa-youtube"></i></a></li>
+								<li><a href="javascript:;" class="btn-link"><i class="fa fa-instagram"></i></a></li>
 								<!-- Search Button ==== -->
 								<li class="search-btn"><button id="quik-search-btn" type="button" class="btn-link"><i class="fa fa-search"></i></button></li>
 							</ul>
@@ -612,13 +611,22 @@
                 <div class="container">
 					<div class="row">
 						<div class="col-md-12 heading-bx left">
-							<h2 class="title-head">Popular <span>Courses</span></h2>
-							<p>It is a long established fact that a reader will be distracted by the readable content of a page</p>
+							<h2 class="title-head">Our <span>Vision </span></h2>
+							<p>To cater to the educational needs of the children of transferable Central Government employees including Defence and Para-Military personnel by providing a common programme of education.To pursue excellence and set the pace in the field of school education.</p>
+								<p>To initiate and promote experimentation and innovativeness in education in collaboration with other bodies like the Central Board of Secondary Education and the National Council of Educational Research and Training etc.</p>
+<div class="p-t50">
+
+	<h2 class="title-head p-t0">Our <span>Mission </span></h2>
+					
+								<p>To initiate and promote experimentation and innovativeness in education in collaboration with other bodies like the Central Board of Secondary Education and the National Council of Educational Research and Training etc.</p>
+
+</div>
+								
 						</div>
 					</div>
 					<div class="row">
-					<div class="courses-carousel owl-carousel owl-btn-1 col-12 p-lr0">
-						<div class="item">
+				<!--	<div class="courses-carousel owl-carousel owl-btn-1 col-12 p-lr0">
+						 <div class="item">
 							<div class="cours-bx">
 								<div class="action-box">
 									<img src="assets/images/courses/pic1.jpg" alt="">
@@ -645,8 +653,8 @@
 									</div>
 								</div>
 							</div>
-						</div>
-						<div class="item">
+						</div> -->
+						<!-- <div class="item">
 							<div class="cours-bx">
 								<div class="action-box">
 									<img src="assets/images/courses/pic2.jpg" alt="">
@@ -673,8 +681,8 @@
 									</div>
 								</div>
 							</div>
-						</div>
-						<div class="item">
+						</div> -->
+						<!-- <div class="item">
 							<div class="cours-bx">
 								<div class="action-box">
 									<img src="assets/images/courses/pic3.jpg" alt="">
@@ -701,8 +709,8 @@
 									</div>
 								</div>
 							</div>
-						</div>
-						<div class="item">
+						</div> -->
+						<!-- <div class="item">
 							<div class="cours-bx">
 								<div class="action-box">
 									<img src="assets/images/courses/pic4.jpg" alt="">
@@ -729,8 +737,8 @@
 									</div>
 								</div>
 							</div>
-						</div>
-					</div>
+						</div> 
+					</div>-->
 					</div>
 				</div>
 			</div>
@@ -1088,7 +1096,7 @@
         <div class="footer-bottom">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-12 col-md-12 col-sm-12 text-center">Developed , Designed & Maintain By &lt;/Tensor_Block&gt;</div>
+                    <div class="col-lg-12 col-md-12 col-sm-12 text-center text-white">Developed , Designed & Maintain By &lt;/Tensor_Block&gt;</div>
                 </div>
             </div>
         </div>
