--- a/admin/index.html
+++ b/admin/index.html
@@ -65,9 +65,9 @@
 			<!--logo start -->
 			<div class="ttr-logo-box">
 				<div>
-					<a href="index.html" class="ttr-logo">
-						<img class="ttr-logo-mobile" alt="" src="assets/images/logo-mobile.png" width="30" height="30">
-						<img class="ttr-logo-desktop" alt="" src="assets/images/logo-white.png" width="160" height="27">
+					<a href="../index.html" class="ttr-logo">
+						<img class="ttr-logo-mobile" alt="" src="../assets/images/school__logo-removebg-preview.png" width="45"  >
+						<img class="ttr-logo-desktop" alt="" src="../assets/images/school__logo-removebg-preview.png"  >
 					</a>
 				</div>
 			</div>
