--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
 						</div>
 						<!-- Navigation Menu ==== -->
 						<div class="menu-links navbar-collapse collapse justify-content-start" id="menuDropdown">
-							<div class="menu-logo">
-								<a href="index.html"><img src="assets/images/school _logo.jpg" alt=""></a>
+							<div class=" logo">
+								<a href="index.html"><img src="assets/images/school__logo-removebg-preview.png" alt="" width="60" ></a>
 							</div>
 							<ul class="nav navbar-nav">
 								<li class="active"><a href="/index.html">Home</a>
@@ -1069,7 +1069,7 @@
 					jsFileLocation: "assets/vendors/revolution/js/",
 					sliderLayout: "fullwidth",
 					dottedOverlay: "none",
-					delay: 2500,
+					delay: 5500,
 					navigation: {
 						keyboardNavigation: "on",
 						keyboard_direction: "horizontal",
