Made many Changes& Made the Loging Page Working And New Loader

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 	<!-- STYLESHEETS ============================================= -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	<!-- <link class="skin" rel="stylesheet" type="text/css" href="assets/css/color/color-1.css"> -->
+	<link class="skin" rel="stylesheet" type="text/css" href="assets/css/color/color-1.css">
 
 	<!-- REVOLUTION SLIDER CSS ============================================= -->
 	<link rel="stylesheet" type="text/css" href="assets/vendors/revolution/css/layers.css">
@@ -70,18 +70,18 @@
 								<li><a href="javascript:;"><i class="fa fa-envelope-o"></i>Support@website.com</a></li>
 							</ul>
 						</div>
-						<!-- <div class="topbar-right">
+						 <div class="topbar-right">
 						<ul>
-							<li>
+							<!-- <li>
 								<select class="header-lang-bx">
 									<option data-icon="flag flag-uk">English UK</option>
 									<option data-icon="flag flag-us">English US</option>
 								</select>
-							</li>
+							</li> -->
 							<li><a href="login.html">Login</a></li>
-							<li><a href="register.html">Register</a></li>
+							<!-- <li><a href="register.html">Register</a></li> -->
 						</ul>
-					</div> -->
+					</div> 
 					</div>
 				</div>
 			</div>
@@ -371,7 +371,7 @@
 									data-textAlign="['center','center','center','center']" data-paddingtop="[0,0,0,0]"
 									data-paddingright="[0,0,0,0]" data-paddingbottom="[10,10,10,10]"
 									data-paddingleft="[0,0,0,0]"
-									style="z-index: 6; font-family:rubik; font-weight:700; text-align:center; white-space: normal;text-transform:uppercase;">
+									style="z-index: 6; font-family:rubik; font-weight:700; text-align:center; white-space: normal;">
 									Welcome To Our School Website
 								</div>
 
@@ -978,25 +978,14 @@
 									<div class="widget footer_widget">
 										<h5 class="footer-title">Get In Touch</h5>
 										<ul>
-											<li><a href="http://educhamp.themetrades.com/admin/index.html">Dashboard</a>
-											</li>
-											<li><a href="blog-classic-grid.html">Blog</a></li>
+											<li><a href="login.html">Login</a></li>
+											
 											<li><a href="portfolio.html">Portfolio</a></li>
 											<li><a href="event.html">Event</a></li>
 										</ul>
 									</div>
 								</div>
-								<div class="col-4 col-lg-4 col-md-4 col-sm-4">
-									<div class="widget footer_widget">
-										<h5 class="footer-title">Courses</h5>
-										<ul>
-											<li><a href="courses.html">Courses</a></li>
-											<li><a href="courses-details.html">Details</a></li>
-											<li><a href="membership.html">Membership</a></li>
-											<li><a href="profile.html">Profile</a></li>
-										</ul>
-									</div>
-								</div>
+								
 							</div>
 						</div>
 						<!-- <div class="col-12 col-lg-3 col-md-5 col-sm-12 footer-col-4">
