--- a/event.html
+++ b/event.html
@@ -63,18 +63,18 @@
 							<li><a href="javascript:;"><i class="fa fa-envelope-o"></i>Support@website.com</a></li>
 						</ul>
 					</div>
-					<!-- <div class="topbar-right">
+					<div class="topbar-right">
 					<ul>
-						<li>
+						<!-- <li>
 							<select class="header-lang-bx">
 								<option data-icon="flag flag-uk">English UK</option>
 								<option data-icon="flag flag-us">English US</option>
 							</select>
-						</li>
+						</li> -->
 						<li><a href="login.html">Login</a></li>
-						<li><a href="register.html">Register</a></li>
+						<!-- <li><a href="register.html">Register</a></li> -->
 					</ul>
-				</div> -->
+				</div> 
 				</div>
 			</div>
 		</div>
@@ -456,44 +456,33 @@
 								</form>
 							</div>
                         </div>
-                    </div>
-					<div class="col-12 col-lg-5 col-md-7 col-sm-12">
-						<div class="row">
-							<div class="col-4 col-lg-4 col-md-4 col-sm-4">
-								<div class="widget footer_widget">
-									<h5 class="footer-title">Company</h5>
-									<ul>
-										<li><a href="index.html">Home</a></li>
-										<li><a href="about-1.html">About</a></li>
-										<li><a href="faq-1.html">FAQs</a></li>
-										<li><a href="contact-1.html">Contact</a></li>
-									</ul>
+						<div class="col-12 col-lg-5 col-md-7 col-sm-12">
+							<div class="row">
+								<div class="col-4 col-lg-4 col-md-4 col-sm-4">
+									<div class="widget footer_widget">
+										<h5 class="footer-title">Company</h5>
+										<ul>
+											<li><a href="index.html">Home</a></li>
+											<li><a href="about-1.html">About</a></li>
+											<li><a href="faq-1.html">FAQs</a></li>
+											<li><a href="contact-1.html">Contact</a></li>
+										</ul>
+									</div>
 								</div>
-							</div>
-							<div class="col-4 col-lg-4 col-md-4 col-sm-4">
-								<div class="widget footer_widget">
-									<h5 class="footer-title">Get In Touch</h5>
-									<ul>
-										<li><a href="http://educhamp.themetrades.com/admin/index.html">Dashboard</a></li>
-										<li><a href="blog-classic-grid.html">Blog</a></li>
-										<li><a href="portfolio.html">Portfolio</a></li>
-										<li><a href="event.html">Event</a></li>
-									</ul>
+								<div class="col-4 col-lg-4 col-md-4 col-sm-4">
+									<div class="widget footer_widget">
+										<h5 class="footer-title">Get In Touch</h5>
+										<ul>
+											<li><a href="login.html">Login</a></li>
+											
+											<li><a href="portfolio.html">Portfolio</a></li>
+											<li><a href="event.html">Event</a></li>
+										</ul>
+									</div>
 								</div>
-							</div>
-							<div class="col-4 col-lg-4 col-md-4 col-sm-4">
-								<div class="widget footer_widget">
-									<h5 class="footer-title">Courses</h5>
-									<ul>
-										<li><a href="courses.html">Courses</a></li>
-										<li><a href="courses-details.html">Details</a></li>
-										<li><a href="membership.html">Membership</a></li>
-										<li><a href="profile.html">Profile</a></li>
-									</ul>
-								</div>
+								
 							</div>
 						</div>
-                    </div>
 					<div class="col-12 col-lg-3 col-md-5 col-sm-12 footer-col-4">
                         <div class="widget widget_gallery gallery-grid-4">
                             <h5 class="footer-title">Our Gallery</h5>
