--- a/login.html
+++ b/login.html
@@ -62,7 +62,7 @@
 					<h2 class="title-head">Login to your <span>Account</span></h2>
 					<p>Don't have an account? <a href="register.html">Create one here</a></p>
 				</div>	
-				<form class="contact-bx alert">
+				<form class="contact-bx">
 					<div class="row placeani">
 						<div class="col-lg-12">
 							<div class="form-group">
@@ -91,7 +91,7 @@
 						</div>
 						<div class="col-lg-12 m-b30">
 							<!-- <button name="submit" type="submit" value="Login" class="btn button-md" onclick="validate()">Login</button> -->
-							<input  name="submit" type="submit" value="Login" class="btn button-md alert" onclick="validate()">
+							<input  name="submit" type="submit" value="Login" class="btn button-md " onclick="validate()">
 						</div>
 					
 					</div>
