FIxed the problem

--- a/about-1.html
+++ b/about-1.html
@@ -73,7 +73,7 @@
 									<option data-icon="flag flag-us">English US</option>
 								</select>
 							</li> -->
-							<li><a href="login.html">Login</a></li>
+							<li><a href="login.html"><i class="ti-new-window"></i> Login</a></li>
 							<!-- <li><a href="register.html">Register</a></li> -->
 						</ul>
 					</div> 
