--- a/contact-1.html
+++ b/contact-1.html
@@ -74,7 +74,7 @@
 								<option data-icon="flag flag-us">English US</option>
 							</select>
 						</li> -->
-						<li><a href="login.html">Login</a></li>
+						<li><a href="login.html"><i class="ti-new-window"></i> Login</a></li>
 						<!-- <li><a href="register.html">Register</a></li> -->
 					</ul>
 				</div> 
@@ -253,20 +253,20 @@
 					<div class="col-lg-5 col-md-5 m-b30">
 						<div class="bg-primary text-white contact-info-bx">
 							<h2 class="m-b10 title-head">Contact <span>Information</span></h2>
-							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+							<!-- <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p> -->
 							<div class="widget widget_getintuch">	
 								<ul>
-									<li><i class="ti-location-pin"></i>75k Newcastle St. Ponte Vedra Beach, FL 309382 New York</li>
-									<li><i class="ti-mobile"></i>0800-123456 (24/7 Support Line)</li>
-									<li><i class="ti-email"></i>info@example.com</li>
+									<li><i class="ti-location-pin"></i>Fatima Nagar, Bongaon, Rangia, Assam</li>
+									<li><i class="ti-mobile"></i>+91 9954950683, +91 8876847538</li>
+									<li><i class="ti-email"></i>fatimaschoolrangia@gmail.com</li>
 								</ul>
 							</div>
 							<h5 class="m-t0 m-b20">Follow Us</h5>
 							<ul class="list-inline contact-social-bx">
-								<li><a href="#" class="btn outline radius-xl"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#" class="btn outline radius-xl"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#" class="btn outline radius-xl"><i class="fa fa-linkedin"></i></a></li>
-								<li><a href="#" class="btn outline radius-xl"><i class="fa fa-google-plus"></i></a></li>
+								<li><a href="https://www.facebook.com/FatimaSchool2007" class="btn outline radius-xl"><i class="fa fa-facebook"></i></a></li>
+								<li><a href="https://www.gmail.com/fatimaschoolrangia@gmail.com" class="btn outline radius-xl"><i class="ti-email"></i></a></li>
+								<!-- <li><a href="#" class="btn outline radius-xl"><i class="fa fa-linkedin"></i></a></li>
+								<li><a href="#" class="btn outline radius-xl"><i class="fa fa-google-plus"></i></a></li> -->
 							</ul>
 						</div>
 					</div>
@@ -321,7 +321,7 @@
 								<div class="col-lg-12">
 									<div class="form-group">
 										<div class="input-group">
-											<div class="g-recaptcha" data-sitekey="6Lec4sojAAAAACvjAXXjKVN_P8s2P0W9WgJ8Ctok" data-callback="verifyRecaptchaCallback" data-expired-callback="expiredRecaptchaCallback"></div>
+											<div class="g-recaptcha" data-sitekey="6Lec4sojAAAAACvjAXXjKVN_P8s2P0W9WgJ8Ctok" data-callback="verifyRecaptchaCallback" data-expired-callback="expiredRecaptchaCallback" data-secretkey="6Lec4sojAAAAAAQJL7uPZK4AnXyZcbvou9am3bgn"></div>
 											<input class="form-control d-none" style="display:none;" data-recaptcha="true" required data-error="Please complete the Captcha">
 										</div>
 									</div>
