--- a/login.html
+++ b/login.html
@@ -54,7 +54,7 @@
 	<div id="loading-icon-bx"></div>
 	<div class="account-form">
 		<div class="account-head" style="background-image:url(assets/images/background/bg2.jpg);">
-			<a href="index.html"><img src="assets/images/logo-white-2.png" alt=""></a>
+			<a href="index.html"><img src="assets/images/fatima_name_logo-removebg-preview.png" alt=""></a>
 		</div>
 		<div class="account-form-inner">
 			<div class="account-container">
@@ -80,15 +80,15 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-lg-12">
+						<!-- <div class="col-lg-12">
 							<div class="form-group form-forget">
 								<div class="custom-control custom-checkbox">
 									<input type="checkbox" class="custom-control-input" id="customControlAutosizing">
-									<label class="custom-control-label" for="customControlAutosizing">Remember me</label>
+									 <label class="custom-control-label" for="customControlAutosizing">Remember me</label> 
 								</div>
-								<a href="forget-password.html" class="ml-auto">Forgot Password?</a>
+								 <a href="forget-password.html" class="ml-auto">Forgot Password?</a> 
 							</div>
-						</div>
+						</div> -->
 						<div class="col-lg-12 m-b30">
 							<!-- <button name="submit" type="submit" value="Login" class="btn button-md" onclick="validate()">Login</button> -->
 							<input  name="submit" type="submit" value="Login" class="btn button-md " onclick="validate()">
@@ -97,6 +97,12 @@
 					</div>
 				</form>
 			</div>
+			<div class="alert alert-light alert-dismissible fade show" role="alert" id="alert">
+				<p ></p>
+				<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+				  <span aria-hidden="true">&times;</span>
+				</button>
+			  </div>
 		</div>
 	</div>
 </div>
