--- a/gallery.html
+++ b/gallery.html
@@ -116,7 +116,7 @@
 					<!-- Navigation Menu ==== -->
 					<div class="menu-links navbar-collapse collapse justify-content-start" id="menuDropdown">
 						<div class="menu-logo">
-							<a href="index.html"><img src="assets/images/school _logo.jpg" alt=""></a>
+							<a href="index.html"><img src="assets/images/school__logo-removebg-preview.png" alt=""></a>
 						</div>
 						<ul class="nav navbar-nav">
 							<li><a href="/index.html">Home</a>
@@ -127,15 +127,15 @@
 									<li><a href="about-1.html">About</a>
 									</li>
 									<li><a href="event.html">Event</a></li>
-									<li><a href="javascript:;">FAQ's<i class="fa fa-angle-right"></i></a>
+									<!-- <li><a href="javascript:;">FAQ's<i class="fa fa-angle-right"></i></a> -->
 										<!-- <ul class="sub-menu">
 											<li><a href="faq-1.html">FAQ's 1</a></li>
 											<li><a href="faq-2.html">FAQ's 2</a></li>
 										</ul> -->
-									</li>
+									<!-- </li> -->
 									<li><a href="contact-1.html">Contact Us</a>
 									</li>
-									<li class="active"><a href="/portfolio.html">Portfolio</a></li>
+									<li class="active"><a href="/gallery.html">Gallery</a></li>
 									
 									<!-- <li><a href="error-404.html">404 Page</a></li> -->
 								</ul>
