--- a/contact-1.html
+++ b/contact-1.html
@@ -47,7 +47,12 @@
 	<!-- STYLESHEETS ============================================= -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<link class="skin" rel="stylesheet" type="text/css" href="assets/css/color/color-1.css">
-
+	<script type="text/javascript">
+		var onloadCallback = function() {
+		  grecaptcha.render('g-recaptcha', {
+			'sitekey' : '6LfBntMjAAAAAFpu7LXiWpAsDxFq1HxFBz687My4'
+		  });
+		};</script>
 </head>
 <body id="bg">
 <div class="page-wraper">
@@ -321,7 +326,7 @@
 								<div class="col-lg-12">
 									<div class="form-group">
 										<div class="input-group">
-											<div class="g-recaptcha" data-sitekey="6LfBntMjAAAAAFpu7LXiWpAsDxFq1HxFBz687My4" data-callback="verifyRecaptchaCallback" data-expired-callback="expiredRecaptchaCallback" data-secretkey="6Lec4sojAAAAAAQJL7uPZK4AnXyZcbvou9am3bgn"></div>
+											<div class="g-recaptcha" data-sitekey="6LfBntMjAAAAAFpu7LXiWpAsDxFq1HxFBz687My4" data-callback="verifyRecaptchaCallback" data-expired-callback="expiredRecaptchaCallback" data-secretkey="6Lec4sojAAAAAAQJL7uPZK4AnXyZcbvou9am3bgn" id="g-recaptcha"></div>
 											<input class="form-control d-none" style="display:none;" data-recaptcha="true" required data-error="Please complete the Captcha" value="reset">
 										</div>
 									</div>
