Updated color part

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
 									data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]"
 									data-paddingleft="[0,0,0,0]"
 									style="z-index: 7; white-space: nowrap; color:#fff; font-family:rubik; font-size:18px; font-weight:400;">
-									Batter Education For A Better
+									Better Education For A Better Life
 								</div>
 
 								<!-- LAYER NR. 3 -->
@@ -333,8 +333,7 @@
 									data-textAlign="['center','center','center','center']"
 									data-paddingtop="[12,12,12,12]" data-paddingright="[30,35,35,15]"
 									data-paddingbottom="[12,12,12,12]" data-paddingleft="[30,35,35,15]"
-									style="z-index: 8; white-space: nowrap; outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer; background-color:var(--primary) !important; border:0; border-radius:30px; margin-right:5px;">
-									READ MORE </div>
+									style="z-index: 8; white-space: nowrap; outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer; background-color:var(--primary) !important; border:0; border-radius:30px; margin-right:5px;">READ MORE</div>
 								<div class="tp-caption Newspaper-Button rev-btn" id="slide-100-layer-6"
 									data-x="['center','center','center','center']"
 									data-hoffset="['-90','-80','-75','-90']" data-y="['top','top','top','top']"
@@ -346,7 +345,7 @@
 									data-paddingtop="[12,12,12,12]" data-paddingright="[30,35,35,15]"
 									data-paddingbottom="[12,12,12,12]" data-paddingleft="[30,35,35,15]"
 									style="z-index: 8; white-space: nowrap; outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer; border-radius:30px;">
-									<a href="/contact-1.html">CONTACT US</a>
+									<a href="/about-1.html">Take a tour</a>
 									</div>
 							</li>
 							<li data-index="rs-200" data-transition="parallaxvertical" data-slotamount="default"
