--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 									<option data-icon="flag flag-us">English US</option>
 								</select>
 							</li> -->
-								<!-- <li><a href="login.html"><i class="ti-new-window"></i> Login</a></li> -->
+								 <!-- <li><a href="login.html"><i class="ti-new-window loginbar"></i> Login</a></li> -->
 								<!-- <li><a href="register.html">Register</a></li> -->
 								</ul>
 								</div>
