--- a/contact-1.html
+++ b/contact-1.html
@@ -46,12 +46,12 @@
 	<!-- STYLESHEETS ============================================= -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<link class="skin" rel="stylesheet" type="text/css" href="assets/css/color/color-1.css">
-	<script type="text/javascript">
+	<<script type="text/javascript">
 		var onloadCallback = function () {
 			grecaptcha.render('g-recaptcha', {
 				'sitekey': '6LfBntMjAAAAAFpu7LXiWpAsDxFq1HxFBz687My4'
 			});
-		};</script>
+		};</script> 
 
 	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 	<script type="text/javascript">
@@ -507,6 +507,7 @@
 	<script src='assets/vendors/switcher/switcher.js'></script>
 	<script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit" async defer>
 	</script>
+	<script src="assets/js/login.js"></script>
 	<!-- <script src='assets/www.google.com/recaptcha/api.js'></script> -->
 	<!-- <script src="https://www.google.com/recaptcha/api.js"></script> -->
 </body>
