--- a/contact-1.html
+++ b/contact-1.html
@@ -286,7 +286,7 @@
 							</div>
 						</div>
 						<div class="col-lg-7 col-md-7">
-							<form class="contact-bx ajax-form">
+							<form class="contact-bx ajax-form" method="POST">
 								<div class="ajax-message"></div>
 								<div class="heading-bx left">
 									<h2 class="title-head">Get In <span>Touch</span></h2>
@@ -406,8 +406,8 @@
 									on job searching.</p>
 								<div class="subscribe-form m-b20">
 									<form class="subscription-form"
-										action="http://educhamp.themetrades.com/demo/assets/script/mailchamp.php"
-										method="post">
+										
+										method="POST">
 										<div class="ajax-message"></div>
 										<div class="input-group">
 											<input name="email" required="required" class="form-control"
