fixed the form to some extend and added animation

--- a/contact-1.html
+++ b/contact-1.html
@@ -46,12 +46,12 @@
 	<!-- STYLESHEETS ============================================= -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<link class="skin" rel="stylesheet" type="text/css" href="assets/css/color/color-1.css">
-	<<script type="text/javascript">
+	 <<script type="text/javascript">
 		var onloadCallback = function () {
 			grecaptcha.render('g-recaptcha', {
 				'sitekey': '6LfBntMjAAAAAFpu7LXiWpAsDxFq1HxFBz687My4'
 			});
-		};</script> 
+		};</script>  
 
 	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 	<script type="text/javascript">
@@ -286,7 +286,7 @@
 							</div>
 						</div>
 						<div class="col-lg-7 col-md-7">
-							<form class="contact-bx ajax-form" method="POST">
+							<form class="contact-bx ajax-form" method="POST" >
 								<div class="ajax-message"></div>
 								<div class="heading-bx left">
 									<h2 class="title-head">Get In <span>Touch</span></h2>
@@ -347,7 +347,7 @@
 													id="g-recaptcha"></div>
 												<input class="form-control d-none" style="display:none;"
 													data-recaptcha="true" required
-													data-error="Please complete the Captcha" value="reset">
+													data-error="Please complete the Captcha">
 											</div>
 										</div>
 									</div>
