--- a/index.html
+++ b/index.html
@@ -1083,8 +1083,8 @@
 	<script src="assets/vendors/revolution/js/extensions/revolution.extension.parallax.min.js"></script>
 	<script src="assets/vendors/revolution/js/extensions/revolution.extension.slideanims.min.js"></script>
 	<script src="assets/vendors/revolution/js/extensions/revolution.extension.video.min.js"></script>
-	<script src="https://unpkg.com/scrollreveal"></script>
-	<script src="assets/js/scroll-reveal.js"></script>
+	<script defer src="https://unpkg.com/scrollreveal"></script>
+	<script defer src="assets/js/scroll-reveal.js"></script>
 	<script>
 		jQuery(document).ready(function () {
 			var ttrevapi;
